src/coolcmp/unit_tests/Custom/type_checker/fail/formal-wrong-type.cl
class Main inherits IO {
    main() : Int {1};
    
    fun(z: Int, b:String, a:Fuk): Int {
        1
    };
};
